--- a/CalculateDistance/src/main/resources/application.properties
+++ b/CalculateDistance/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.datasource.username=root
 spring.datasource.password=root
 
 spring.jpa.show-sql=false
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=validate
 
 spring.liquibase.enabled=true
 spring.liquibase.change-log=classpath:liquibase/changelog-master.xml
