--- a/SearchEngine/pom.xml
+++ b/SearchEngine/pom.xml
@@ -13,9 +13,9 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <checkstyle-maven-plugin.version>3.1.1</checkstyle-maven-plugin.version>
-        <junit.platform.version>5.6.2</junit.platform.version>
+        <junit.platform.version>5.8.1</junit.platform.version>
         <junit.version>4.12</junit.version>
-        <puppycrawl.version>8.34</puppycrawl.version>
+        <puppycrawl.version>9.1</puppycrawl.version>
         <checkstyle.config.remote>
             https://raw.githubusercontent.com/skillbox-java/checkstyle/master/checkstyle_M4.xml
         </checkstyle.config.remote>
@@ -58,6 +58,16 @@
 
     <dependencies>
         <dependency>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <version>2.22.2</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <version>3.8.1</version>
+        </dependency>
+        <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok-maven</artifactId>
             <version>1.18.20.0</version>
@@ -65,22 +75,22 @@
         <dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-core</artifactId>
-            <version>5.5.5.Final</version>
+            <version>5.6.1.Final</version>
         </dependency>
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
-            <version>8.0.15</version>
+            <version>8.0.25</version>
         </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
-            <version>2.11.1</version>
+            <version>2.13.0</version>
         </dependency>
         <dependency>
             <groupId>org.jsoup</groupId>
             <artifactId>jsoup</artifactId>
-            <version>1.14.1</version>
+            <version>1.14.3</version>
         </dependency>
         <dependency>
             <groupId>org.imgscalr</groupId>
@@ -90,7 +100,7 @@
         <dependency>
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
-            <version>2.8.0</version>
+            <version>20030203.000550</version>
         </dependency>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
